# securify2.5

./: Dockerfile  OWASP_IMPLEMENTATION.md  README.md  pyproject.toml  setup.py
securify/: __main__.py
securify/analyses/patterns/ast/: delegatecall_storage_pattern.py  solc_version_pattern.py  storage_collision_pattern.py  unchecked_arithmetic_pattern.py
securify/staticanalysis/libfunctors/: compile_functors.sh  functor-test-forall.dl  util-sets.dl
securify/staticanalysis/souffle/: relation.py  souffle.py  wrapper.py
securify/staticanalysis/souffle_analysis/: analysis-input.dl  analysis-patterns.dl  util-graph.dl  util-lists.dl
securify/staticanalysis/souffle_analysis/contexts/: callstack-context.dl
securify/staticanalysis/souffle_analysis/patterns/: dao.dl  dos-gas-limit.dl  flash-loan-attacks.dl  insecure-randomness.dl  missing-input-validation.dl  price-oracle-manipulation.dl  reentrancy-benign.dl  reentrancy-no-eth.dl  timestamp.dl  tx-origin.dl  unchecked-overflow.dl  unhandled-exception.dl  unrestricted-delegatecall.dl  unrestricted-selfdestruct.dl  unrestricted-write.dl  unused-return.dl
securify/staticanalysis/souffle_analysis/semantics/: trusted-variable.dl
securify/utils/: truffle_integration.py
tests/owasp-sc-top-10/: README.md  SC02_PriceOracleManipulation.sol  SC07_FlashLoanAttacks.sol  SC09_InsecureRandomness.sol
